# interview-public-python-ai

./: .gitignore  README.md  docker-compose.yml  mise.toml
.github/workflows/: build-and-push.yml
ansible-playbooks/: 0100-generate_dynamic_inventory.yml  0200-preconfigure_vms.yml  0300-k3s_install.yml  0300-k8s_install_k3s.yml  0310-prepare_bastion.yml  0310-setup_local_env.yml  0400-bastion_prepare_packages.yml  0400-prepare_bastion.yml  0410-bastion_pull_kubeconfig.yml  README.md  ansible.cfg
ansible-playbooks/group_vars/all/: configuration.yml  configuration.yml.template
ansible-playbooks/inventory/: inventory
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b6721251d70_system_prompt_table.py  81c1476612b3_add_system_prompt_to_conversations.py  88409616ef43_support_thinking.py  c5d264def611_initial_migration_for_conversations_and_.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  conversations.py  messages.py
backend/app/services/: chat_service.py
frontend/: Dockerfile  index.html  kubb.config.ts  nginx.conf  openapi.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
k8s_manifests/: README.md  kustomization.yaml
manifests/: 00-namespace.yaml  10-postgres.yaml  20-ollama.yaml  30-backend.yaml  40-frontend.yaml
scripts/: init-dev.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
(+89 files in other folders)
